--- a/school/diary/templates/diary/week.html
+++ b/school/diary/templates/diary/week.html
@@ -6,7 +6,7 @@
 {% block contents %} 
     <ul>
     {% for day in week %}
-        <li><a href="{{day.title}}">{{day.title}}</a></li>
+        <li><a href="day/{{day.id}}/">{{day.title}}</a></li>
     {% endfor %}
     </ul>
 {% endblock contents %}
