--- a/school/diary/templates/general/base.html
+++ b/school/diary/templates/general/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="header">
-        <h1></a href="/">Bibell School</a></h1>
+        <h1>Bibell School</h1>
         <p><a href="/">Home page</a>- - - -<a href="/my_week/">Diary</a>
     <hr>
     </div>
