--- a/monopoly/user_profile/templates/user_profile/base.html
+++ b/monopoly/user_profile/templates/user_profile/base.html
@@ -7,10 +7,17 @@
 <body>
     <div class="header">
         <h1>Monopoly Best</h1>
-        <a href="{% url "index" %}">Home page</a>- - - -
-        <a href="{% url "top_players" %}">Top players</a>- - - -
-        <a href="{% url "recent_games" %}">Recent Games</a>- - - -
-        <a href="{% url "support_page" %}">Support</a>
+        <a href="{% url "index" %}">Home page</a >- - - -
+        <a href="{% url "top_players" %}">Top players</a> - - - -
+        <a href="{% url "recent_games" %}">Recent Games</a> - - - -
+        <a href="{% url "support_page" %}">Support</a> __________________________________
+        {% if request.user.pk %}
+        <a href="{% url "user_page" request.user.pk %}">{{request.user}}</a> - 
+        <a href="{% url "logout" %}">Not you? Log out!</a>
+        {% else %}
+        <a href="{% url "login" %}">Login</a>
+        <a href="{% url "register" %}">Register</a>
+        {% endif %}
         <hr>
     </div>
 
