--- a/monopoly/user_profile/templates/user_profile/top_users.html
+++ b/monopoly/user_profile/templates/user_profile/top_users.html
@@ -5,7 +5,7 @@
 {% block contents %}
 <ol>
     {% for user in user_list %}
-    <li> <a href=/user/{{user.pk}}>{{user.username}}</a> ({{user.experience}} XP)
+    <li> <a href=/user/{{user.pk}}>{{user.auth_user.username}}</a> ({{user.experience}} XP)
     {% endfor %}
 </ol>
 {% endblock contents %}
