--- a/monopoly/user_profile/templates/user_profile/user_page.html
+++ b/monopoly/user_profile/templates/user_profile/user_page.html
@@ -1,16 +1,20 @@
 {% extends 'user_profile/base.html' %}
 
-{% block page_title %}User {{user.username}}{% endblock page_title %}
+{% block page_title %}User {{user.auth_user.username}}{% endblock page_title %}
 
 {% block contents%} 
 
-<h2>{{user.username}}</h2><hr/>
-<h3>BIO:</h3>{{user.user_bio}}<br/>
-<h3><a href=trophies/> View {{user.username}}'s' trophies</a></h3>
+<h2>{{user.auth_user.username}}</h2><hr/>
+
+<h3>BIO
+    {% if request.user.pk == user.pk %}<a href={% url 'edit_bio' request.user.pk %}>[Edit]</a>{% endif %}
+    :</h3>{{user.user_bio}}<br/>
+
+<h3><a href=trophies/> View {{user.auth_user.username}}'s' trophies</a></h3>
 <h3>Statistics:</h3>
 <ul>
     <li>Experience: {{user.experience}}</li>
-    <li>Wins: <a href=won_games/>{{user.wins}}</a></li>
+    <li>Wins: <a href=won_games/>{{won_games_count}}</a></li>
     <li>Losses: {{user.losses}}</li>
 </ul>
 
@@ -24,7 +28,7 @@
 {% endfor %}
 <hr/>
 
-
+{% if request.user.is_authenticated %}
 <form action="{% url "user_comment_success" user.pk %}" method="POST">{% csrf_token %}
     <div>
         <label for="comment">Leave your own comment</label>
@@ -32,4 +36,7 @@
     </div>
         <button>Post!</button>
 </form>
+{% else %}
+To comment youself, first <a href={% url 'login' %}>log in!</a>
+{% endif %}
 {% endblock contents%}
